--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 
 <body class="min-h-screen pb-12">
