--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
     <!-- 頂部導航欄 -->
     <nav id="mainNav"
-        class="hidden sticky top-0 z-50 glass-panel m-4 px-6 py-3 flex items-center justify-between shadow-2xl">
+        class="hidden sticky top-0 z-50 glass-panel m-4 px-6 py-3 flex flex-wrap items-center justify-between shadow-2xl transition-all duration-300">
+        <!-- Logo Section -->
         <div class="flex items-center gap-3 cursor-pointer" onclick="switchTab('dashboard')">
             <div class="bg-sky-500 p-2 rounded-lg shadow-lg shadow-sky-500/20">
                 <i data-lucide="layout-dashboard" class="text-white w-5 h-5"></i>
@@ -89,45 +90,61 @@
             </div>
         </div>
 
-        <div class="flex items-center gap-1">
-            <button onclick="switchTab('dashboard')"
-                class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all"
-                id="btn-dashboard">
-                <i data-lucide="home" class="w-4 h-4"></i> 首頁
-            </button>
-            <button onclick="switchTab('seating')"
-                class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all"
-                id="btn-seating">
-                <i data-lucide="grid" class="w-4 h-4"></i> 學生管理
-            </button>
-            <button onclick="switchTab('records')"
-                class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all"
-                id="btn-records">
-                <i data-lucide="clipboard-list" class="w-4 h-4"></i> 班級紀錄
-            </button>
-            <button onclick="switchTab('lottery')"
-                class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all"
-                id="btn-lottery">
-                <i data-lucide="dices" class="w-4 h-4"></i> 互動抽籤
-            </button>
-            <button onclick="switchTab('algo')"
-                class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all"
-                id="btn-algo">
-                <i data-lucide="cpu" class="w-4 h-4"></i> 教學工具
-            </button>
-            <button onclick="switchTab('settings')"
-                class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all"
-                id="btn-settings">
-                <i data-lucide="settings" class="w-4 h-4"></i> 系統設定
-            </button>
-        </div>
+        <!-- Mobile Menu Button -->
+        <button id="mobileMenuBtn"
+            class="md:hidden p-2 text-slate-400 hover:text-white transition-colors rounded-lg hover:bg-slate-800"
+            onclick="toggleMobileMenu()">
+            <i data-lucide="menu" class="w-6 h-6"></i>
+        </button>
 
-        <div class="flex items-center gap-4 border-l border-slate-700 pl-4">
-            <select id="classSelector"
-                class="bg-slate-800 border border-slate-700 rounded-md px-3 py-1 text-sm focus:ring-2 focus:ring-sky-500 outline-none"></select>
-            <div onclick="logout()" title="登出系統"
-                class="w-8 h-8 rounded-full bg-gradient-to-tr from-sky-500 to-indigo-500 flex items-center justify-center font-bold text-xs cursor-pointer hover:ring-2 hover:ring-white transition-all shadow-lg shadow-indigo-500/30">
-                <i data-lucide="log-out" class="w-4 h-4 text-white"></i>
+        <!-- Collapsible Content -->
+        <div id="navContent"
+            class="hidden w-full md:flex md:w-auto md:items-center md:gap-4 mt-4 md:mt-0 border-t border-slate-700/50 md:border-t-0 pt-4 md:pt-0 animate-in slide-in-from-top-2 duration-200 md:animate-none">
+
+            <!-- Navigation Buttons -->
+            <div
+                class="flex flex-col md:flex-row gap-2 md:gap-1 w-full md:w-auto xl:absolute xl:left-1/2 xl:-translate-x-1/2">
+                <button onclick="switchTab('dashboard')"
+                    class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all w-full md:w-auto"
+                    id="btn-dashboard">
+                    <i data-lucide="home" class="w-4 h-4"></i> 首頁
+                </button>
+                <button onclick="switchTab('seating')"
+                    class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all w-full md:w-auto"
+                    id="btn-seating">
+                    <i data-lucide="grid" class="w-4 h-4"></i> 學生管理
+                </button>
+                <button onclick="switchTab('records')"
+                    class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all w-full md:w-auto"
+                    id="btn-records">
+                    <i data-lucide="clipboard-list" class="w-4 h-4"></i> 班級紀錄
+                </button>
+                <button onclick="switchTab('lottery')"
+                    class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all w-full md:w-auto"
+                    id="btn-lottery">
+                    <i data-lucide="dices" class="w-4 h-4"></i> 互動抽籤
+                </button>
+                <button onclick="switchTab('textbook')"
+                    class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all w-full md:w-auto"
+                    id="btn-textbook">
+                    <i data-lucide="book-open" class="w-4 h-4"></i> 教材檔案
+                </button>
+                <button onclick="switchTab('settings')"
+                    class="nav-btn px-4 py-2 rounded-lg flex items-center gap-2 text-sm font-medium transition-all w-full md:w-auto"
+                    id="btn-settings">
+                    <i data-lucide="settings" class="w-4 h-4"></i> 系統設定
+                </button>
+            </div>
+
+            <!-- Right Controls -->
+            <div
+                class="flex items-center gap-4 border-t md:border-t-0 md:border-l border-slate-700 mt-4 md:mt-0 pt-4 md:pt-0 md:pl-4 xl:border-l-0 xl:pl-0 justify-between md:justify-start w-full md:w-auto">
+                <select id="classSelector"
+                    class="bg-slate-800 border border-slate-700 rounded-md px-3 py-1 text-sm focus:ring-2 focus:ring-sky-500 outline-none flex-1 md:flex-none"></select>
+                <div onclick="logout()" title="登出系統"
+                    class="w-8 h-8 rounded-full bg-gradient-to-tr from-sky-500 to-indigo-500 flex items-center justify-center font-bold text-xs cursor-pointer hover:ring-2 hover:ring-white transition-all shadow-lg shadow-indigo-500/30 shrink-0">
+                    <i data-lucide="log-out" class="w-4 h-4 text-white"></i>
+                </div>
             </div>
         </div>
     </nav>
@@ -538,15 +555,68 @@
             </div>
         </section>
 
-        <!-- 分頁 5: 演算法教學 -->
-        <section id="view-algo" class="hidden space-y-8 animate-in fade-in">
-            <div class="glass-panel p-12 text-center">
-                <i data-lucide="wrench" class="w-16 h-16 text-slate-600 mx-auto mb-4"></i>
-                <h2 class="text-2xl font-bold text-slate-400">教學工具正在維護與更新中</h2>
-                <p class="text-slate-500 mt-2">我們正在整合視覺化排序、搜尋以及邏輯運算模擬器。</p>
-                <button onclick="switchTab('dashboard')" class="mt-6 text-sky-400 hover:underline">返回儀表板</button>
+        <!-- 分頁 5: 教材檔案 -->
+        <section id="view-textbook" class="hidden space-y-8 animate-in fade-in">
+            <div class="flex items-center justify-between mb-6">
+                <h2 class="text-2xl font-bold flex items-center gap-2">
+                    <i data-lucide="book-open" class="text-sky-400"></i> 教材檔案列表
+                </h2>
+                <button
+                    class="bg-sky-600 hover:bg-sky-500 text-white px-4 py-2 rounded-lg text-sm font-bold flex items-center gap-2 transition-all shadow-lg shadow-sky-900/20">
+                    <i data-lucide="upload" class="w-4 h-4"></i> 上傳教材
+                </button>
+            </div>
+
+            <input type="file" id="textbookUploadInput" accept="application/pdf" multiple class="hidden"
+                onchange="handleTextbookUpload(this)">
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6" id="textbookGrid">
+                <!-- Upload Placeholder -->
+                <div onclick="triggerTextbookUpload()"
+                    class="glass-panel p-6 flex flex-col items-center justify-center gap-4 text-center min-h-[200px] border-2 border-dashed border-slate-700/50 hover:border-sky-500/50 hover:bg-slate-800/50 transition-all cursor-pointer group">
+                    <div
+                        class="w-16 h-16 rounded-2xl bg-slate-800 flex items-center justify-center group-hover:bg-sky-500/20 transition-colors shadow-inner">
+                        <i data-lucide="plus"
+                            class="w-8 h-8 text-slate-500 group-hover:text-sky-400 transition-colors"></i>
+                    </div>
+                    <div>
+                        <h3 class="font-bold text-slate-400 group-hover:text-sky-400 transition-colors">新增教材</h3>
+                        <p class="text-xs text-slate-500 mt-1">支援 PDF 格式</p>
+                    </div>
+                </div>
+
+
+
             </div>
         </section>
+
+        <!-- PDF Preview Modal -->
+        <div id="pdfPreviewModal"
+            class="fixed inset-0 z-[200] bg-slate-900/90 backdrop-blur-sm hidden flex flex-col items-center justify-center p-4 animate-in fade-in duration-200">
+            <div
+                class="w-full max-w-6xl h-full flex flex-col glass-panel overflow-hidden shadow-2xl ring-1 ring-white/10">
+                <div class="flex items-center justify-between p-4 border-b border-slate-700 bg-slate-800/50">
+                    <h3 class="font-bold text-white flex items-center gap-2">
+                        <i data-lucide="file-text" class="text-indigo-400"></i>
+                        <span id="pdfPreviewTitle">Document Preview</span>
+                    </h3>
+                    <div class="flex items-center gap-2">
+                        <a id="pdfDownloadLink" href="#" download
+                            class="p-2 hover:bg-slate-700 rounded-lg text-slate-400 hover:text-white transition-colors"
+                            title="下載檔案">
+                            <i data-lucide="download" class="w-5 h-5"></i>
+                        </a>
+                        <button onclick="closePdfPreview()"
+                            class="p-2 hover:bg-slate-700 rounded-lg text-slate-400 hover:text-white transition-colors">
+                            <i data-lucide="x" class="w-5 h-5"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="flex-1 bg-slate-800 relative">
+                    <iframe id="pdfPreviewFrame" class="w-full h-full" src=""></iframe>
+                </div>
+            </div>
+        </div>
 
         <!-- 分頁 101: 互動鍵盤 (New) -->
         <section id="view-keyboard" class="hidden animate-in fade-in duration-500">
