--- a/index.html
+++ b/index.html
@@ -166,10 +166,19 @@
                                 <h2 class="text-2xl font-bold">歡迎回來，老師</h2>
                                 <p id="classStatusMsg" class="text-slate-400 mt-1 text-sm">正在載入課程資訊...</p>
                             </div>
-                            <div class="text-right">
-                                <span id="currentDate" class="text-sm text-slate-400 font-mono block">----.--.--
-                                    ---</span>
-                                <span id="currentTime" class="text-lg font-black text-sky-400 font-mono">00:00:00</span>
+                            <div class="text-right flex flex-col items-end gap-2">
+                                <div>
+                                    <span id="currentDate"
+                                        class="text-sm text-slate-400 font-mono block">----.--.--</span>
+                                    <span id="currentTime"
+                                        class="text-lg font-black text-sky-400 font-mono">00:00:00</span>
+                                </div>
+                                <a href="ScreenMarker-Desktop.zip" download
+                                    class="bg-indigo-600/30 text-indigo-300 hover:bg-indigo-600 hover:text-white px-3 py-1.5 rounded-lg text-xs font-bold transition-all flex items-center gap-1.5 border border-indigo-500/30 group shadow-lg">
+                                    <i data-lucide="download"
+                                        class="w-3.5 h-3.5 group-hover:-translate-y-0.5 transition-transform"></i>
+                                    下載桌面畫筆軟體
+                                </a>
                             </div>
                         </div>
 
@@ -2078,6 +2087,134 @@
 
     <script src="js/google-sync.js"></script>
     <script src="js/script.js"></script>
+
+    <!-- Drawing Overlay -->
+    <div id="drawingLayer" class="fixed inset-0 z-[9000] pointer-events-none hidden transition-opacity duration-300">
+        <canvas id="mainCanvas" class="w-full h-full touch-none cursor-crosshair"></canvas>
+
+        <!-- Toolbar -->
+        <div id="drawingToolbar"
+            class="absolute bottom-10 left-1/2 -translate-x-1/2 bg-slate-900/95 backdrop-blur-xl p-4 rounded-3xl border border-slate-700/50 shadow-2xl flex items-center gap-4 pointer-events-auto transition-all duration-500 translate-y-32 opacity-0 ring-1 ring-white/10">
+            <!-- Toolbar Content Wrapper -->
+            <div id="toolbarContent" class="flex items-center gap-4 transition-all duration-300">
+                <!-- Colors -->
+                <div class="flex gap-3 pr-5 border-r border-slate-700 items-center">
+                    <button onclick="setDrawColor('#ef4444')"
+                        class="w-10 h-10 rounded-full bg-red-500 hover:scale-110 active:scale-90 transition-all ring-2 ring-transparent focus:ring-white color-btn shadow-lg shadow-red-500/20"
+                        data-color="#ef4444"></button>
+                    <button onclick="setDrawColor('#f59e0b')"
+                        class="w-10 h-10 rounded-full bg-amber-500 hover:scale-110 active:scale-90 transition-all ring-2 ring-transparent focus:ring-white color-btn shadow-lg shadow-amber-500/20"
+                        data-color="#f59e0b"></button>
+                    <button onclick="setDrawColor('#10b981')"
+                        class="w-10 h-10 rounded-full bg-emerald-500 hover:scale-110 active:scale-90 transition-all ring-2 ring-transparent focus:ring-white color-btn shadow-lg shadow-emerald-500/20"
+                        data-color="#10b981"></button>
+                    <button onclick="setDrawColor('#3b82f6')"
+                        class="w-10 h-10 rounded-full bg-blue-500 hover:scale-110 active:scale-90 transition-all ring-2 ring-transparent focus:ring-white color-btn shadow-lg shadow-blue-500/20"
+                        data-color="#3b82f6"></button>
+                    <button onclick="setDrawColor('#ffffff')"
+                        class="w-10 h-10 rounded-full bg-white hover:scale-110 active:scale-90 transition-all ring-2 ring-transparent focus:ring-slate-400 color-btn shadow-lg shadow-white/10"
+                        data-color="#ffffff"></button>
+                </div>
+
+                <!-- Tools -->
+                <div class="flex gap-2 items-center">
+                    <button onclick="setTool('pen')" id="btnToolPen"
+                        class="p-3 bg-slate-800 text-indigo-400 ring-1 ring-indigo-500 rounded-2xl transition-all active:scale-95 tool-btn"
+                        title="畫筆">
+                        <i data-lucide="pen" class="w-6 h-6"></i>
+                    </button>
+                    <button onclick="setTool('line')" id="btnToolLine"
+                        class="p-3 text-slate-400 hover:text-white hover:bg-slate-800 rounded-2xl transition-all active:scale-95 tool-btn"
+                        title="直線">
+                        <i data-lucide="minus" class="w-6 h-6"></i>
+                    </button>
+                    <button onclick="setTool('rect')" id="btnToolRect"
+                        class="p-3 text-slate-400 hover:text-white hover:bg-slate-800 rounded-2xl transition-all active:scale-95 tool-btn"
+                        title="方形">
+                        <i data-lucide="square" class="w-6 h-6"></i>
+                    </button>
+                    <button onclick="setTool('text')" id="btnToolText"
+                        class="p-3 text-slate-400 hover:text-white hover:bg-slate-800 rounded-2xl transition-all active:scale-95 tool-btn"
+                        title="文字">
+                        <i data-lucide="type" class="w-6 h-6"></i>
+                    </button>
+
+                    <!-- Size Slider -->
+                    <div class="flex flex-col items-center mx-2 w-24">
+                        <label for="brushSize" class="text-xs text-slate-400 mb-1">粗細/大小</label>
+                        <input type="range" id="brushSize" min="2" max="50" value="4"
+                            class="w-full h-1 bg-slate-700 rounded-lg appearance-none cursor-pointer accent-indigo-500"
+                            oninput="updateBrushSize(this.value)">
+                    </div>
+
+
+                    <div class="w-px h-8 bg-slate-700 mx-1"></div>
+
+                    <button onclick="setTool('eraser')" id="btnToolEraser"
+                        class="p-3 text-slate-400 hover:text-rose-300 hover:bg-slate-800 rounded-2xl transition-all active:scale-95 tool-btn"
+                        title="橡皮擦">
+                        <i data-lucide="eraser" class="w-6 h-6"></i>
+
+                    </button>
+                    <button onclick="toggleChalkboard()" id="btnChalkboard"
+                        class="p-3 text-slate-400 hover:text-white hover:bg-slate-800 rounded-2xl transition-all active:scale-95"
+                        title="黑板模式">
+                        <i data-lucide="monitor" class="w-6 h-6"></i>
+                    </button>
+                    <button onclick="undoLastAction()"
+                        class="p-3 text-slate-400 hover:text-white hover:bg-slate-800 rounded-2xl transition-all active:scale-95"
+                        title="復原 (Ctrl+Z)">
+                        <i data-lucide="rotate-ccw" class="w-6 h-6"></i>
+                    </button>
+                    <button onclick="clearCanvas()"
+                        class="p-3 text-slate-400 hover:text-rose-400 hover:bg-rose-900/20 rounded-2xl transition-all active:scale-95"
+                        title="清除全部">
+                        <i data-lucide="trash-2" class="w-6 h-6"></i>
+                    </button>
+                </div>
+
+                <div class="w-px h-8 bg-slate-700 mx-2"></div>
+            </div>
+
+            <!-- Minimize/Close Controls -->
+            <div class="flex items-center gap-2">
+                <button onclick="toggleToolbarCollapse()" id="btnCollapseToolbar"
+                    class="p-3 text-slate-400 hover:text-white hover:bg-slate-800 rounded-2xl transition-all active:scale-95"
+                    title="縮小工具列">
+                    <i data-lucide="chevron-down" class="w-6 h-6"></i>
+                </button>
+                <button onclick="toggleDrawingMode()"
+                    class="p-3 bg-slate-800 text-slate-400 hover:text-white hover:bg-slate-700 rounded-2xl transition-colors border border-slate-700 shadow-inner group"
+                    title="縮小畫布 (隱藏)">
+                    <i data-lucide="minus" class="w-6 h-6"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Floating Toggle Button (Global) -->
+    <div id="fabDrawingContainer"
+        class="fixed bottom-8 right-8 z-[8000] transition-all duration-300 animate-in zoom-in duration-500">
+        <button id="fabDrawing" onclick="toggleDrawingMode()"
+            class="relative w-16 h-16 bg-indigo-600 hover:bg-indigo-500 text-white rounded-full shadow-[0_0_30px_rgba(79,70,229,0.4)] flex items-center justify-center transition-all hover:scale-110 active:scale-95 group border-4 border-slate-900 box-content">
+            <i data-lucide="pen-tool"
+                class="w-8 h-8 group-hover:-translate-y-1 group-hover:translate-x-1 transition-transform"></i>
+
+            <!-- Minimize Badge -->
+            <div onclick="minimizeFab(event)"
+                class="absolute -top-2 -right-2 w-6 h-6 bg-slate-800 hover:bg-slate-700 text-slate-400 hover:text-white rounded-full flex items-center justify-center border border-slate-600 shadow-lg opacity-0 group-hover:opacity-100 transition-all hover:scale-125 hover:rotate-90 pointer-events-auto"
+                title="最小化畫筆按鈕">
+                <i data-lucide="minus" class="w-4 h-4"></i>
+            </div>
+        </button>
+    </div>
+
+    <!-- Minimized FAB Handle -->
+    <button id="fabMinimizedHandle" onclick="restoreFab()"
+        class="fixed bottom-12 -right-2 z-[8000] w-10 h-12 bg-slate-800/90 backdrop-blur text-slate-400 hover:text-white rounded-l-xl border-y border-l border-slate-700 shadow-lg flex items-center justify-center transition-all hidden translate-x-full group hover:-translate-x-2 active:scale-95 pr-2"
+        title="展開畫筆按鈕">
+        <i data-lucide="chevron-left" class="w-5 h-5 group-hover:-translate-x-1 transition-transform"></i>
+    </button>
 </body>
 
 </html>
